<resources>
    <string name="app_name">QR Barcode Scanner</string>
    <string name="reset">Rescan</string>
    <string name="hint_press_back">Press Back again to exit</string>
    <string name="all_formats">All formats</string>
    <string name="mode">Scanning mode</string>
    <string name="qr_code">QR code</string>
    <string name="ean13">EAN13</string>
    <string name="scanning">Scanning</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="error_no_permission">No permission to Camera</string>
    <string name="error_detector">Can\'t initialise detector, try to restart</string>
    <string name="no_activity_error">Your system doesn\'t support web search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="history">History</string>
    <string name="no_data">No data</string>
    <string name="code_type">Type</string>
    <string name="event_date">Date</string>
    <string name="rate_app_header">Rate application</string>
    <string name="rate_app_text">Please, rate the app at PlayMarket</string>
    <string name="rate_app_OK">Rate</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="hint_try_to_reset">Try to restart application</string>
    <string name="stop_camera">Stop camera</string>
    <string name="error_camera">Can\'t start a camera provider, please try to restart</string>
    
    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_auto_save">Auto-save scanned barcodes</string>
    <string name="settings_auto_save_summary">Automatically save scanned barcodes to history</string>
    <string name="settings_history_retention">History retention (days)</string>
    <string name="settings_history_retention_summary">Number of days to keep history items</string>
    <string name="settings_sound">Sound feedback</string>
    <string name="settings_sound_summary">Play sound when barcode is scanned</string>
    <string name="settings_vibration">Vibration feedback</string>
    <string name="settings_vibration_summary">Vibrate when barcode is scanned</string>
    <string name="settings_camera_flash">Camera flash</string>
    <string name="settings_camera_flash_summary">Enable camera flash for scanning</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_dark_mode_summary">Choose app theme appearance</string>
    <string name="settings_dark_mode_system">Follow system</string>
    <string name="settings_dark_mode_light">Light mode</string>
    <string name="settings_dark_mode_dark">Dark mode</string>
    <string name="settings_image_brightness">Image brightness</string>
    <string name="settings_image_brightness_summary">Adjust brightness of saved barcode images (0-150)</string>
    <string name="settings_image_contrast">Image contrast</string>
    <string name="settings_image_contrast_summary">Adjust contrast of saved barcode images (0.5-2.0)</string>
    <string name="settings_reset">Reset to defaults</string>
    <string name="settings_reset_dialog_title">Reset Settings</string>
    <string name="settings_reset_dialog_message">Are you sure you want to reset all settings to default values?</string>
    <string name="settings_reset_confirm">Reset</string>
    <string name="settings_saved">Settings saved</string>
    <string name="barcode_preview">Barcode preview</string>

</resources>
