<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.com.programmer.qrscanner.CameraFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:alpha="0.8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_search"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@drawable/background_rounded_corner_light"
                android:drawablePadding="8dp"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/search"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:drawableTopCompat="@drawable/ic_search_white_24dp" />
            <TextView
                android:id="@+id/button_share"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@drawable/background_rounded_corner_light"
                android:drawablePadding="8dp"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/share"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:drawableTopCompat="@drawable/ic_share_white_24dp" />

            <TextView
                android:id="@+id/button_reset"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@drawable/background_rounded_corner_light"
                android:drawablePadding="8dp"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/reset"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:drawableTopCompat="@drawable/ic_refresh_white_24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:layout_alignParentBottom="false"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:alpha="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scanning"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorWhite"
                android:padding="8dp"
                android:textSize="20sp" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_visibility_off_white_24"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/stop_camera" />

    </RelativeLayout>
